347778 nsLocalFile::MoveTo no longer creates directories when needed on OS X after bug 294584.  r=darin